# cimppy

./: .clang-tidy  .clangd  .codespellrc  .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
cmake/: install-config.cmake.in  install-rules.cmake  variables.cmake
include/cimppy/: cimppy.hpp  events.hpp  simulation.hpp
source/: cimppy.cpp  events.cpp  simulation.cpp
test/: CMakeLists.txt
test/source/: cimppy_test.cpp  simulation_test.cpp
